# soket

./: .editorconfig  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/mlp_resnet/: model.py
examples/mlp_resnet/data/: README.md
python/: _test.py
python/soket/: __init__.py  _dtype.py  autodiff.py  dtype.py  dtype.pyx  ops.py  optim.py  soket.py  tensor.py  transforms.py
python/soket/backend/: __init__.py  device.py  ndarray.py  numpy.py
python/soket/nn/: __init__.py  init.py  module.py  prototypes.py
python/soket/ops/: __init__.py  defn.py
python/soket/tensor/: __init__.py  creation.py  tensor.py  util.py
python/soket/utils/: tensor.py
python/soket/utils/data/: loader.py
python/soket/utils/data/datasets/: mnist.py
soket/: __init__.py  _dtype.py  autodiff.pxd  autodiff.pyx  dtype.pxd  dtype.pyx  optim.pyx  transforms.py  transforms.pyx
soket/backend/: __init__.pxd  __init__.py  device.pxd  device.pyx
soket/distribution/: __init__.py  functional.pyx
soket/nn/: __init__.py  functional.pxd  functional.pyx  init.py  module.pxd  module.pyx  prototypes.pyx
soket/ops/: functional.py
soket/tensor/: __init__.pxd  __init__.py  creation.pxd  creation.pyx  detached.pxd  detached.pyx  tensor.pxd  tensor.pyx  util.pyx
soket/tensor/ops/: __init__.pxd  backward.pxd  backward.pyx  forward.pxd  forward.pyx  intern.pxd  intern.pyx
soket/utils/: ftz.pyx
soket/utils/data/: __init__.py  dataset.py
soket/utils/data/datasets/: __init__.py  mnist.py
